# backend/app/api/routes/user.py
@@ -16,6 +16,7 @@ from app.db.utils import (
     update_user,
     get_users,
     delete_user,
+    check_if_user_is_active,
 )
 
 
@@ -29,17 +30,21 @@ def route_get_users():
     return users
 
 
+@doc(description="get the current user by Email", tags=["users"])
+@bp.route("/user/<email>", methods=["GET"])
+@marshal_with(UserSchema())
+def route_get_user_email(email):
+    current_user = get_user_by_mail(db_session, email)
+    if not current_user:
+        abort(400, "Could not authenticate user with provided token")
+    elif not check_if_user_is_active(current_user):
+        abort(400, "Inactive user")
+    return current_user
+    
+
 @doc(
     description="Create the users", 
     tags=["users"], 
-    # requestBody={
-    #     "required": True,
-    #     "content": {
-    #         "application/json": {
-    #             "schema": UserCreateSchema
-    #         }
-    #     }
-    # }
 )
 @bp.route("/create_user", methods=["POST"])
 @use_kwargs(UserCreateSchema, location="json")
@@ -68,31 +73,28 @@ def route_create_user(first_name=None, last_name=None, email=None):
     return user
 
 
+
 @doc(description="Update the users", tags=["users"], consumes=["application/json"])
-@bp.route("/update_user/<int:user_id>", methods=["PATCH"])
+@bp.route("/update_user", methods=["PATCH"])
 @use_kwargs(UserUpdateSchema, location="json")
 @marshal_with(UserSchema())
-def route_update_user(db_session, current_email, new_email, first_name, last_name):
+def route_update_user(current_email, new_email, first_name, last_name):
     user = update_user(
         db_session=db_session,
+        current_email=current_email,
         first_name=first_name,
         last_name=last_name,
         new_email=new_email,
     )
 
-    if user is None:
-        return abort(
-            400, f"The user with this email doesn't exists: {current_email}"
-        )
-
     return user
 
 
 @doc(description="Delete the users", tags=["users"], consumes=["application/json"])
-@bp.route("/delete_user/<int:user_id>", methods=["DELETE"])
+@bp.route("/delete_user", methods=["DELETE"])
 @use_kwargs(UserDeleteSchema, location="json")
 @marshal_with(UserSchema())
-def route_delete_user(db_session, email):
+def route_delete_user(email):
     user = delete_user(
         db_session=db_session,
         email=email,
